--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -766,11 +766,11 @@
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:layout_weight="1"
-          android:drawableTop="@drawable/ic_collection_add"
+          android:drawableTop="@drawable/ic_share_icon_image"
           android:drawablePadding="2dp"
           android:drawableTint="@color/app_red"
           android:gravity="center"
-          android:text="Collection"
+          android:text="Share"
           android:textColor="@color/app_grey"
           android:textSize="11sp"
           app:fontName="oswald.ttf"
@@ -809,4 +809,15 @@
   </LinearLayout>
 
 
+  <include
+    android:id="@+id/followPopUpBottomContainer"
+    layout="@layout/follow_pop_up_article_detail_fragment"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@id/bottom_Lout"
+    android:layout_centerHorizontal="true"
+    android:layout_marginStart="@dimen/space_10"
+    android:layout_marginEnd="@dimen/space_10"
+    android:layout_marginBottom="@dimen/space_10"
+    android:visibility="gone" />
 </RelativeLayout>
