--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -228,6 +228,7 @@
             android:layout_toRightOf="@+id/whatsapp"
             android:alpha="0.85"
             android:padding="12dp"
+          android:visibility="gone"
             android:src="@drawable/collectionadd"
             android:tint="@color/white_color" />
 
