--- a/app/src/main/res/layout/short_story_listing_item.xml
+++ b/app/src/main/res/layout/short_story_listing_item.xml
@@ -167,7 +167,7 @@
                 android:paddingTop="12dp"
                 android:paddingRight="8dp"
                 android:paddingBottom="12dp"
-                android:src="@drawable/collectionadd"
+                android:src="@drawable/ic_share_icon"
                 android:tint="@color/app_red" />
 
             <LinearLayout
