--- a/app/src/main/res/menu/choose_short_story_menu.xml
+++ b/app/src/main/res/menu/choose_short_story_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/shareShortStory"
-        android:icon="@drawable/ic_share_icon"
-        android:title="@string/ad.bottom_bar.generic_share" />
+        android:id="@+id/addCollection"
+        android:icon="@drawable/ic_collection_add"
+        android:title="@string/collection" />
     <item
         android:id="@+id/bookmarkShortStory"
         android:icon="@drawable/ic_profile_bookmark"
