--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -562,4 +562,5 @@
     <color name="color_E2E2E2">#E2E2E2</color>
     <color name="default_selected_dot_color">#ffffff</color>
     <color name="default_dot_color">#e8e8e8</color>
+    <color name="color_24A851">#24A851</color>
 </resources>
