follower following list pagination + contact crash fixes + clean up

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -307,6 +307,12 @@
         <item name="android:itemTextAppearance">@style/myCustomMenuTextApearance</item>
     </style>
 
+    <style name="PermissionDialogTheme" parent="AppTheme">
+        <item name="android:textColorPrimary">@color/app_light_black</item>
+        <item name="android:textColorSecondary">@color/app_light_black</item>
+        <item name="android:itemTextAppearance">@style/myCustomMenuTextApearance</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="actionMenuTextColor">@color/black_color</item>
     </style>
