--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -73,7 +73,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="4dp"
             android:padding="12dp"
-            android:src="@drawable/ic_bookmark"
+            android:src="@drawable/ic_more_vert_black_24dp"
             android:tint="#FFFFFF"
             android:visibility="visible" />
 
