--- a/app/src/main/res/layout/comment_options_dialog.xml
+++ b/app/src/main/res/layout/comment_options_dialog.xml
@@ -16,6 +16,7 @@
     android:text="@string/groups.block_member"
     android:textColor="@color/spell_check.black"
     android:textSize="17sp"
+    android:visibility="gone"
     app:fontName="oswald.ttf" />
 
   <com.mycity4kids.widget.CustomFontTextView
