--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -770,7 +770,7 @@
           android:drawablePadding="2dp"
           android:drawableTint="@color/app_red"
           android:gravity="center"
-          android:text="Share"
+          android:text="@string/collection"
           android:textColor="@color/app_grey"
           android:textSize="11sp"
           app:fontName="oswald.ttf"
